# ClaudeTeam

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_ISSUES.md  Dockerfile  LICENSE  README.md  docker-compose.live-smoke.override.yml  docker-compose.prod-hardened.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: clear_intercept.py  health_intercept.py  help_intercept.py  (+5 more)
config/: feishu_scopes.json
docs/: ARCHITECTURE.md  CODE_STYLE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_ISSUES.md  DEVELOPMENT.md  OPERATIONS.md  POLICY.md  PROGRESS.md  README.md  README_CN.md  README_EN.md  ROADMAP.md  SETUP_ISSUES.md  TESTING.md  TROUBLESHOOTING.md  architect_blind_smoke_spec_2026-04-25.md  architect_creds_persistence_2026-04-25.md  architect_creds_persistence_v2_2026-04-25.md  architect_lazywake_fix_plan_2026-04-25.md  architect_pane_diff_idle_2026-04-25.md  bitable_degradation_smoke.md  boss-todo.md  boss_todo_bitable_design.md  cli-credentials.md  coder_lazywake_impl_2026-04-25.md  coder_phase_b_2026-04-25.md  codex-dual-engine.md  fix_spec_consolidated_2026-04-25.md  hardening_profile.md  lazy_wake_resume_smoke_2026-04-25.md  live_container_smoke.md  manager_operating_sop.md  message_rendering_spec.md  multi-team-deployment.md  no_bitable_core_smoke.md  public_contracts.md  qa_smoke_lazywake_plan_a_2026-04-25.md  review_blind_smoke_2026-04-25.md  review_blind_smoke_fix_round_2026-04-25.md  (+10 more)
scripts/: .team.json.prev  agent_status_evidence.py  agent_status_signals.py  boss_todo.py  claude_token_guard.sh  cli_credentials.py  config.py  docker-deploy.sh  docker-entrypoint.sh  feishu_api.py  feishu_blocks.py  feishu_msg.py  feishu_router.py  feishu_sync.py  fire_agent.py  get-invite-link.py  hire_agent.py  host_prep.sh  kanban_sync.py  local_facts.py  manager_patrol.py  memory_archive.py  memory_manager.py  message_renderer.py  msg_parser.py  msg_queue.py  preflight_claude_auth.sh  regression_boss_todo.py  regression_local_facts.py  regression_message_rendering.py  regression_message_sanitizer.py  regression_tmux_inject.py  relaunch_as_codex.sh  reset.sh  restore_env.sh  router_restart.sh  run_no_live_tests.py  setup.py  slash_commands.py  slash_smoke_test.py  (+15 more)
templates/: manager.identity.md  team.json.README.md  team.json.example  worker.identity.md
tests/: README.md  bitable_degradation_smoke.py  codex_launcher_smoke.py  compat_import_paths.py  compat_scripts_entrypoints.py  conftest.py  helpers.py  no_bitable_core_smoke.py  no_live_guard.py  regression_local_facts.py  regression_message_rendering.py  regression_message_sanitizer.py  regression_tmux_inject.py  run.py  run_no_live.py  runtime_state_paths_smoke.py  safety.py  static_public_contract_check.py  static_safety_check.py  static_skill_layout_check.py  test_agent_detector.py  test_agent_state.py  test_compact_reread.py  test_feishu_client_send.py  test_feishu_msg_say.py  test_health_collection.py  test_memory_archive.py  test_ordered_list_renderer.py  test_profile_naming.py  test_reflection.py  test_router_cursor.py  test_router_daemon_runtime.py  test_router_dispatch.py  test_router_wake.py  test_slash_dispatch.py  test_slash_handlers.py  test_supervisor_scan.py  test_tmux_wake_ready.py  test_wake_detector_integration.py  test_watchdog_is_healthy.py  (+1 more)
(+257 files in other folders)
