[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claudeteam"
version = "0.1.0"
description = "Harness your Claude Code: multi-agent orchestrator over tmux + Feishu"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
keywords = ["claude-code", "agents", "tmux", "feishu", "lark", "llm-orchestration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/zylMozart/ClaudeTeam"
Repository = "https://github.com/zylMozart/ClaudeTeam"
Issues = "https://github.com/zylMozart/ClaudeTeam/issues"

[project.scripts]
claudeteam = "claudeteam.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
